--- a/src/style.css
+++ b/src/style.css
@@ -44,13 +44,15 @@ main {
 }
 
 .container-welcome{
-	position: absolute;
+	position: relative;
 	width: 669px;
 	height: 399px;
 	left: 138px;
 	top: 235px;
 	background: #F28F16;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	align-items: center;
+	justify-content: center;
 }
 
 .imgPikachu{
@@ -59,16 +61,37 @@ width: 634px;
 height: 632px;
 left: 807px;
 top: calc(50% - 632px/2 + 59.5px);
-background: url(PIKACHU.png);
+/*background: url(PIKACHU.png);*/
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 z-index: 1;
+visibility: active;
 }
 
 
 .cardPokemon-front{
 background: linear-gradient(180deg, #70A83B 0%, rgba(112, 168, 59, 0) 100%);
 border-radius: 25px;
+position: absolute;
+width: 370px;
+height: 478px;
+left: 51px;
+top: 223px;
+
 }
+
+.cardPokemon-back{
+position: absolute;
+width: 370px;
+height: 478px;
+left: 51px;
+top: 223px;
+background: linear-gradient(180deg, #70A83B 0%, rgba(112, 168, 59, 0.838912) 16.11%, rgba(112, 168, 59, 0) 100%);
+border-radius: 25px;
+flex-wrap: wrap;
+justify-content: center;
+margin: 0 auto;
+}
+
 
 /* .container-main {
 	background-image: linear-gradient(120deg, #fff 0%, #c2e9fb 100%);
