--- a/src/style.css
+++ b/src/style.css
@@ -4,28 +4,30 @@
 padding: 0;
 margin: 0;
 box-sizing: border-box;
-max-width: 1400px;
-
 }
+
 /* Estilo del header */
-header{
+
+.container-header{
 display: flex;
+width: 100%;
+height: 80px;
+position: relative;
 background-color: #F5DB13;
 box-shadow: 0px 4px 4px rgba(121, 83, 83, 0.25);
-justify-content: space-around;
+justify-content: space-between;
+padding-left: 20px;
 }
 
-header .img{
-display:flex;
-}
-/* Estilos de la sección home */
-main {
+.nav-bar{
 display: flex;
-background-color: #fff;
+justify-content: space-around;
+width: 550px;
 }
+
+/* Estilos de la sección home */
 
 .btnHeader{
-display:flex;
 border: transparent;
 background-color:#F5DB13;
 font-family: 'Revalia';
@@ -33,13 +35,22 @@ font-size: 25px;
 }
 
 .btnHeader:hover {
-	display: flex;
 cursor: pointer;
 transform: scale(1.015);
 }
 
-.container-home{
+.container-main{
+display: flex;
+justify-content: center;
+background-color: #fff;
+}
+
+.container-mainPokedex{
 	display: flex;
+	justify-content: center;
+}
+.container-home{
+display: flex;
 position: absolute;
 width: 1260px;
 height: 510px;
@@ -49,13 +60,12 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .imgPikachu{
-	display: flex;
 position: relative;
-left: 740px;
+left: 800px;
 }
 
 .container-welcome{
-	display: flex;
+display: flex;
 position: absolute;
 width: 669px;
 height: 399px;
@@ -78,9 +88,9 @@ color:#FFF;}
 
 
 /* Estilo de la sección Pokedex */
-.container-pokedex{
-	display: flex;
-	flex-wrap: column-wrap;
+.card-pokedex{
+display: flex;
+flex-flow: row wrap;
 }
 
 .cardPokemon-front{
@@ -89,11 +99,8 @@ background: linear-gradient(180deg, #70A83B 0%, rgba(112, 168, 59, 0.838912) 16.
 border-radius: 25px;
 width: 370px;
 height: 478px;
-margin: 40px;
-position: absolute;
+position: relative;
 font-family: 'Ropa Sans', sans-serif;
-z-index: -1;
-
 }
 
 .namePokemon{
@@ -131,7 +138,7 @@ color: #fff;
 top: 370px;
 left: 70px;
 font-size:30px;
-width: 200px;
+height: 50px;
 }
 
 .cardPokemon-back{
@@ -139,10 +146,8 @@ width: 200px;
 	border-radius: 25px;
 	width: 370px;
 	height: 478px;
-	margin: 40px;
 	position: relative;
 	font-family: 'Ropa Sans', sans-serif;
-	z-index: 0;
 }
 
 .region{
