--- a/src/style.css
+++ b/src/style.css
@@ -46,8 +46,8 @@ background-color: #fff;
 }
 
 .container-mainPokedex{
-	display: flex;
-	justify-content: center;
+display: flex;
+justify-content: center;
 }
 .container-home{
 display: flex;
@@ -78,7 +78,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 p{
-	display: flex;
+display: flex;
 font-family: 'Revalia';
 font-size: 85px;
 margin: 20px;
@@ -88,9 +88,10 @@ color:#FFF;}
 
 
 /* Estilo de la sección Pokedex */
-.card-pokedex{
+.card-pokedex {
 display: flex;
 flex-flow: row wrap;
+justify-content: center;
 }
 
 .cardPokemon-front{
@@ -101,6 +102,7 @@ width: 370px;
 height: 478px;
 position: relative;
 font-family: 'Ropa Sans', sans-serif;
+margin: 20px;
 }
 
 .namePokemon{
@@ -141,7 +143,7 @@ font-size:30px;
 height: 50px;
 }
 
-.cardPokemon-back{
+/* .cardPokemon-back{
 	background: linear-gradient(180deg, #f5f5f5 0%, rgba(112, 168, 59, 0.838912) 16.11%, rgba(112, 168, 59, 0) 100%);
 	border-radius: 25px;
 	width: 370px;
@@ -156,7 +158,7 @@ text-align: left;
 }
 .resistant{
 position:relative;
-}
+} */
 
 /* .imgPikachu{
 position: absolute;
