--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@ justify-content: center;
 .container-home{
 display: flex;
 position: absolute;
-width: 1260px;
+width: 100%;
 height: 510px;
 margin: 40px;
 background: #F2B807;
@@ -89,8 +89,8 @@ text-align: center;
 color:#FFF;}
 
 
-/* Estilo de la sección Pokedex */
-.cardFrontPokemon {
+/* Estilo de la sección Pokedex Delantera */
+/* .cardFrontPokemon {
 display: flex;
 flex-flow: row wrap;
 justify-content: center;
@@ -144,22 +144,52 @@ left: 70px;
 font-size:30px;
 height: 50px;
 }
+ */
+/*************HASTA ACÁ FUNCIONA*******************/
+
+
+/* Sección trasera de la carta Pokemon*/ 
+
+/* .cardBackPokemon{
+display: flex;
+flex-flow: row wrap;
+justify-content: center;
+} */
 
 /* .cardPokemon-back{
-	background: linear-gradient(180deg, #f5f5f5 0%, rgba(112, 168, 59, 0.838912) 16.11%, rgba(112, 168, 59, 0) 100%);
-	border-radius: 25px;
-	width: 370px;
-	height: 478px;
-	position: relative;
-	font-family: 'Ropa Sans', sans-serif;
+display: flex;
+background: linear-gradient(180deg, #70A83B 0%, rgba(112, 168, 59, 0.838912) 16.11%, rgba(112, 168, 59, 0) 100%);
+border-radius: 25px;
+width: 370px;
+height: 478px;
+position: relative;
+font-family: 'Ropa Sans', sans-serif;
+margin: 20px;
 }
 
 .region{
-position:relative;
+position: absolute;
+width: 318px;
+height: 41px;
+left: 20px;
+top: 20px;
+text-transform: uppercase;
+font-size:40px;
+}
+
+.resistant{
+position: absolute;
+left: 250px;
+top: 20px;
+font-size:40px;
+} */
+
+/* .region{
+position:absolute;
 text-align: left;
 }
 .resistant{
-position:relative;
+position:absolute;
 } */
 
 /* .imgPikachu{
@@ -212,3 +242,103 @@ margin: 0 auto;
 	flex-direction: column;
 	align-items: center;
 } */
+
+
+
+
+
+/*** Prueba de diseño de CSS CardPokemon******/
+
+.cardsPokemon{
+display: flex;
+width: 370px;
+height: 478px;
+position: relative;
+transition: .3s ease all;
+transform: rotateY(0deg);
+transform-style: preserve-3d;
+cursor: pointer;
+z-index: 1;
+}
+
+.cardsPokemon.active {
+transform: rotateY(180deg);
+}
+
+.cardPokemon-front{
+	display: flex;
+	background: linear-gradient(180deg, #70A83B 0%, rgba(112, 168, 59, 0.838912) 16.11%, rgba(112, 168, 59, 0) 100%);
+	border-radius: 25px;
+	width: 370px;
+	height: 478px;
+	position: relative;
+	font-family: 'Ropa Sans', sans-serif;
+	margin: 20px;
+	justify-content: center;
+	z-index: 2;
+
+}
+
+.namePokemon{
+	position: absolute;
+	width: 318px;
+	height: 41px;
+	left: 20px;
+	top: 20px;
+	text-transform: uppercase;
+	font-size:40px;
+}
+
+.numPokemon{
+	position: absolute;
+	left: 250px;
+	top: 20px;
+	font-size:40px;
+}
+
+.imgPokemon{
+	position: absolute;
+	width: 350px;
+	height: 306px;
+	top:75px;
+}
+
+.typePokemon {
+	position: relative;
+	align-items: center;
+	text-transform: uppercase;
+	background: #a299a3;
+	/* padding: 5px; */
+	border-radius: 5px;
+	color: #fff;
+	top: 370px;
+	/* left: 30px; */
+	font-size:30px;
+	height: 50px;
+}
+
+.cardFrontPokemon .flexbox{
+	display: flex;
+	justify-content: space-between;
+
+}
+
+.cardPokemon-front.active {
+ visibility: hidden;
+}
+
+.cardPokemon-back{
+	display: flex;
+	width: 370px;
+	height: 478px;
+	background: linear-gradient(180deg, #70A83B 0%, rgba(112, 168, 59, 0.838912) 16.11%, rgba(112, 168, 59, 0) 100%);
+	border-radius: 25px;
+	margin: 20px;
+	transform: rotateY(180deg);
+	/* z-index: -2; */
+	position: relative;
+	backface-visibility: hidden;
+
+}
+
+
