--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,7 @@ background-color: #fff;
 .container-home{
 display: flex;
 position: absolute;
-width: 100%;
+width: 90%;
 height: 510px;
 margin: 40px;
 background: #F2B807;
@@ -85,7 +85,7 @@ color:#FFF;}
 
 
 /* Estilo de la sección Pokedex Delantera */
-/* .cardFrontPokemon {
+.cardFrontPokemon {
 display: flex;
 flex-flow: row wrap;
 justify-content: center;
