--- a/src/style.css
+++ b/src/style.css
@@ -49,16 +49,15 @@ background-color: #fff;
 .container-home{
 display: flex;
 position: absolute;
-width: 100%;
+width: 90%;
 height: 510px;
 margin: 40px;
 background: #F2B807;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .imgPikachu{
 position: relative;
-left: 800px;
+left: 900px;
 }
 
 .container-welcome{
@@ -85,7 +84,7 @@ color:#FFF;}
 
 
 /* Estilo de la sección Pokedex Delantera */
-/* .cardFrontPokemon {
+.cardFrontPokemon {
 display: flex;
 flex-flow: row wrap;
 justify-content: center;
