--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Revalia&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
-* {
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+
+body{
+    margin:0;
+}
+
+.container-header, .container-main, .container-mainPokedex, .container-footer{
+    padding: 1em 2em;
+}
+
+.container-main, .container-mainPokedex, .container-footer {
+    float: left;
+    box-sizing: border-box;
 }
 
 /* Estilo del header */
@@ -11,18 +19,15 @@ box-sizing: border-box;
 .container-header{
 display: flex;
 width: 100%;
-height: 80px;
 position: relative;
 background-color: #F5DB13;
 box-shadow: 0px 4px 4px rgba(121, 83, 83, 0.25);
 justify-content: space-between;
-padding-left: 20px;
 }
 
 .nav-bar{
 display: flex;
 justify-content: space-around;
-width: 550px;
 }
 
 /* Estilos de la sección home */
@@ -39,7 +44,12 @@ cursor: pointer;
 transform: scale(1.015);
 }
 
-.container-main,
+.container-main{
+display: flex;
+justify-content: center;
+background-color: #fff;
+}
+
 .container-mainPokedex{
 display: flex;
 justify-content: center;
@@ -48,30 +58,29 @@ background-color: #fff;
 
 .container-home{
 display: flex;
-position: absolute;
-width: 80%;
-height: 510px;
-margin: 25px;
-background: #F2B807;
-}
-
-.imgPikachu{
 position: relative;
-left: 700px;
+width: 100%;
+height: auto;
+background: #F2B807;
+justify-content: space-around;
 }
 
 .container-welcome{
 display: flex;
-position: absolute;
-width: 669px;
-height: 399px;
-left: 48px;
-top: 60px;
+width: 60%;
+height: auto;
 background: #F28F16;
-align-items: center;
-justify-content: center;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+.imgPikachu{
+display: flex;
+position: relative;
+width:40%;
+height:auto;
+}
+
+
 
 p{
 display: flex;
@@ -147,8 +156,7 @@ height: 50px;
     font-size: 28px;
     text-align:center;
     justify-content: center;
-    height: 50px;
-    
+    height: auto;
 }
 
 .container-footer{
