--- a/src/style.css
+++ b/src/style.css
@@ -2,20 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
 
 body{
-    margin:0;
+margin:0;
 }
 
 .container-header, .container-main, .container-mainPokedex, .container-footer{
-    padding: 1em 2em;
+padding: 1em 2em;
 }
 
 .container-main, .container-mainPokedex, .container-footer {
-float: left;
 box-sizing: border-box;
 }
 
 /* Estilo del header */
-
 .container-header{
 display: flex;
 width: 100% auto;
@@ -31,7 +29,7 @@ display: flex;
 justify-content: space-around;
 }
 
-/* Estilos de la sección home */
+/* Estilo de los botones del header */
 
 .btnHeader{
 border: transparent;
@@ -45,52 +43,90 @@ cursor: pointer;
 transform: scale(1.015);
 }
 
+
+
+/* Estilos de la sección home */
 .container-main{
 display: flex;
-justify-content: center;
 background-color: #fff;
 }
 
+.container-home{
+display: flex;
+flex-flow: row;
+width: 100%;
+height: 30em;
+background: #F2B807;
+justify-content: space-around;
+align-items: center;
+position: relative;
+}
+
+.container-welcome{
+display:flex;
+width: 55%;
+height: 80%;
+background: #F28F16;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+margin-right: 35px;
+justify-content: center;
+align-items: center;
+}
+
+.imgPikachu{
+width: 34em;
+height: auto;
+}
+
+.textWelcome{
+/* background:#F28F16; */
+font-family: 'Revalia';
+font-size: 6.5vw;
+color:#FFF;
+padding: 5px;
+text-align:center;
+}
+
+
+
+
+/* Estilo de la sección Pokedex */
 .container-mainPokedex{
 display: flex;
 justify-content: center;
 background-color: #fff;
 }
 
-.container-home{
-display: flex;
-position: relative;
-width: 100%;
-height: auto;
-background: #F2B807;
+/* Estilo de los filtros */
+.filterPokemon{
+display:flex;
 justify-content: space-around;
+align-items: center;
 }
 
-.container-welcome{
-display: flex;
-width: 60%;
-height: auto;
-background: #F28F16;
+.filterPokedex{
+border:transparent;
+background:#ECEBEB;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.imgPikachu{
-display: flex;
-position: relative;
-width:40%;
-height:auto;
-}
-
-
-.textWelcome{
-display: flex;
+border-radius: 5px;
+width: 212px;
+height: 51px;
+font-size:20px;
 font-family: 'Revalia';
-font-size: 6em;
-text-align: center;
-color:#FFF;}
+}
 
+.btnCleanFilter{
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 5px;
+width: 212px;
+height: 51px;
+font-size:20px;
+font-family: 'Revalia';
+background-color:#F5DB13;
+border:transparent;
+}
 
-/* Estilo de la sección Pokedex Delantera */
+/* Estilo de la tarjeta Pokemon */
 .cardFrontPokemon {
 display: flex;
 flex-flow: row wrap;
@@ -147,24 +183,24 @@ height: 50px;
 }
 
 .messageCalcular{
-    background: #F2B807;
-    width: 100%;
-    color: rgb(0, 0, 0);
-    font-family: 'Revalia';
-    font-size: 28px;
-    text-align:center;
-    justify-content: center;
-    height: auto;
+background: #F2B807;
+width: 100%;
+color: rgb(0, 0, 0);
+font-family: 'Revalia';
+font-size: 28px;
+text-align:center;
+justify-content: center;
+height: auto;
 }
 
 .container-footer{
-    background: #F2B807;
-    width: 100%;
-    color: rgb(0, 0, 0);
-    font-family: 'Revalia';
-    font-size: 10px;
-    text-align:center;
-    height: 25px;
+background: #F2B807;
+width: 100%;
+color: rgb(0, 0, 0);
+font-family: 'Revalia';
+font-size: 10px;
+text-align:center;
+height: 25px;
 }
 
 /*** Prueba de diseño de CSS CardPokemon******/
