--- a/src/style.css
+++ b/src/style.css
@@ -291,9 +291,9 @@ display:flex;
 background: #F2B807;
 width: 100%;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+justify-content: center;
 }
 .textFooter {
-text-align:center;
 color: rgb(0, 0, 0);
 font-family: 'Revalia';
 font-size: 20px;
@@ -392,6 +392,11 @@ height: 300px;
 font-size: 40px;
 width: auto;
 }
+
+.textFooter {
+font-size: 13px;
+}
+
 
 }
 /*** Prueba de diseño de CSS CardPokemon******/
